<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomeScreenActivity">

    <ImageButton
        android:id="@+id/musicButton2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="8dp"
        android:background="@color/purple_200"
        android:contentDescription="@string/app_name"
        android:padding="4dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sound"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/minecraft_font2"
        android:text="@string/tictactoe"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/minecraft_font2"
        android:text="@string/thegame"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

    <Button
        android:id="@+id/pAndroidButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/purple_200"
        android:fontFamily="@font/minecraft_font2"
        android:text="@string/singleplayer"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pMLocalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pMLocalButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:fontFamily="@font/minecraft_font2"
        android:text="@string/multilocal"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/pMOnlineButton"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/purple_200"
        android:fontFamily="@font/minecraft_font2"
        android:text="@string/multionline"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pMLocalButton" />

</androidx.constraintlayout.widget.ConstraintLayout>